@@ -1,7 +1,13 @@
-Sun Oct  6 13:20:04 EEST 2002  Pekka Riikonen <priikone@silcnet.org>
+Sun Oct  6 16:48:32 EEST 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* Don't swtich to become primary router if we are backup if
 	  decryption error has occurred.  Affected file silcd/server.c.
+
+	* Fixed a bug in backup router IP address comparison in
+	  silc_server_backup_get.
+
+	  Save now also the port of the server/router and use that
+	  in comparison as well.  Affected file silcd/server_backup.c.
 
 Thu Sep 26 13:51:02 CEST 2002  Pekka Riikonen <priikone@silcnet.org>
 
